--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
-\documentclass[PhD]{PHlab-thesis}
+\documentclass{PHlab-thesis}
 
-\addbibresource{thesis-example.bib}
+\addbibresource{thesis.bib}
 
 \newcommand*\Department中文{資訊工程學研究所}
 \newcommand*\Department英文{Institute of Computer Science and Information Engineering}
@@ -316,6 +316,7 @@ These results show that DDPG preprocessing can improve the performance of object
     \includegraphics[width=0.45\textwidth]{images/instances/original_image_1.png}}
     \subfigure{
     \includegraphics[width=0.45\textwidth]{images/instances/adjusted_image_1.png}}
+    \setcounter{subfigure}{0}  %重新設置子圖計數器
     \subfigure[Original image]{
     \includegraphics[width=0.45\textwidth]{images/instances/original_image_2.png}}
     \subfigure[Adjusted image]{
