--- a/thesis.bib
+++ b/thesis.bib
@@ -1,26 +1,115 @@
-@Article{SS90,
-  author    = {Schneider, T. D. and Stephens, R. M.},
-  title     = {{Sequence logos: a new way to display consensus sequences}},
-  journal   = {{Nucleic Acids Research}},
-  year      = {1990},
-  volume    = {18},
-  number    = {20},
-  pages     = {6097--100},
+% This file was created with JabRef 2.7.2.
+% Encoding: UTF8
+
+@inproceedings{dalal2005histograms,
+  title={Histograms of oriented gradients for human detection},
+  author={Dalal, Navneet and Triggs, Bill},
+  booktitle={2005 IEEE computer society conference on computer vision and pattern recognition (CVPR'05)},
+  volume={1},
+  pages={886--893},
+  year={2005},
+  organization={Ieee}
 }
 
+@article{felzenszwalb2009object,
+  title={Object detection with discriminatively trained part-based models},
+  author={Felzenszwalb, Pedro F and Girshick, Ross B and McAllester, David and Ramanan, Deva},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={32},
+  number={9},
+  pages={1627--1645},
+  year={2009},
+  publisher={IEEE}
+}
 
-@Article{TFH12,
-  author     = {Junko Tsuji  and  Martin C. Frith  and  Kentaro Tomii  and  Paul Horton},
-  CAuthor    = {Paul Horton},
-  title      = {{Mammalian NUMT insertion is non-random}},
-  journal    = {{Nucleic Acids Research}},
-  year       = {2012},
-  month      = {10},
-  volume     = {40},
-  number     = {18},
-  pages      = {9073--88},
-  DOI        = {10.1093/nar/gks424},
-  pmid       = {22761406},
-  keywords   = {PHCA},
-  abstract   = {It is well known that remnants of partial or whole copies of mitochondrial DNA, known as Nuclear MiTochondrial sequences (NUMTs), are found in nuclear genomes.  Since whole genome sequences have become available, many bioinformatics studies have identified putative NUMTs and from those attempted to infer the factors involved in NUMT creation.  These studies conclude that NUMTs represent randomly chosen regions of the mitochondrial genome.  There is less consensus regarding the nuclear insertion sites of NUMTs － previous studies have discussed the possible role of retrotransposons, but some recent ones have reported no correlation or even anti-correlation between NUMT sites and retrotransposons.  These studies have generally defined NUMT sites using BLAST with default parameters.  We analyze a redefined set of human NUMTs, computed with a carefully considered protocol.  We discover that the inferred insertion points of NUMTs have a strong tendency to have high-predicted DNA curvature, occur in experimentally defined open chromatin regions and often occur immediately adjacent to A+T oligomers.  We also show clear evidence that their flanking regions are indeed rich in retrotransposons.  Finally we show that parts of the mitochondrial genome D-loop are under-represented as a source of NUMTs in primate evolution.}
+@inproceedings{girshick2014rich,
+  title={Rich feature hierarchies for accurate object detection and semantic segmentation},
+  author={Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={580--587},
+  year={2014}
+}
+
+@inproceedings{girshick2015fast,
+  title={Fast r-cnn},
+  author={Girshick, Ross},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1440--1448},
+  year={2015}
+}
+
+@article{ren2015faster,
+  title={Faster r-cnn: Towards real-time object detection with region proposal networks},
+  author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  journal={Advances in neural information processing systems},
+  volume={28},
+  year={2015}
+}
+
+@inproceedings{redmon2016you,
+  title={You only look once: Unified, real-time object detection},
+  author={Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={779--788},
+  year={2016}
+}
+
+@article{lillicrap2015continuous,
+  title={Continuous control with deep reinforcement learning},
+  author={Lillicrap, Timothy P and Hunt, Jonathan J and Pritzel, Alexander and Heess, Nicolas and Erez, Tom and Tassa, Yuval and Silver, David and Wierstra, Daan},
+  journal={arXiv preprint arXiv:1509.02971},
+  year={2015}
+}
+
+@inproceedings{caicedo2015active,
+  title={Active object localization with deep reinforcement learning},
+  author={Caicedo, Juan C and Lazebnik, Svetlana},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={2488--2496},
+  year={2015}
+}
+
+@article{bueno2017hierarchical,
+  title={Hierarchical object detection with deep reinforcement learning},
+  author={Bueno, M{\'\i}riam Bellver and Nieto, Xavier Gir{\'o}-i and Marqu{\'e}s, Ferran and Torres, Jordi},
+  journal={Deep Learning for Image Processing Applications},
+  volume={31},
+  number={164},
+  pages={3},
+  year={2017},
+  publisher={IOS Press Amsterdam, The Netherlands}
+}
+
+@article{jie2016tree,
+  title={Tree-structured reinforcement learning for sequential object localization},
+  author={Jie, Zequn and Liang, Xiaodan and Feng, Jiashi and Jin, Xiaojie and Lu, Wen and Yan, Shuicheng},
+  journal={Advances in neural information processing systems},
+  volume={29},
+  year={2016}
+}
+
+@inproceedings{nayak2020reinforcement,
+  title={Reinforcement learning for improving object detection},
+  author={Nayak, Siddharth and Ravindran, Balaraman},
+  booktitle={Computer Vision--ECCV 2020 Workshops: Glasgow, UK, August 23--28, 2020, Proceedings, Part V 16},
+  pages={149--161},
+  year={2020},
+  organization={Springer}
+}
+
+@inproceedings{lin2014microsoft,
+  title={Microsoft coco: Common objects in context},
+  author={Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Hays, James and Perona, Pietro and Ramanan, Deva and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
+  booktitle={Computer Vision--ECCV 2014: 13th European Conference, Zurich, Switzerland, September 6-12, 2014, Proceedings, Part V 13},
+  pages={740--755},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{wang2023yolov7,
+  title={YOLOv7: Trainable bag-of-freebies sets new state-of-the-art for real-time object detectors},
+  author={Wang, Chien-Yao and Bochkovskiy, Alexey and Liao, Hong-Yuan Mark},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={7464--7475},
+  year={2023}
 }
