--- a/thesis.tex
+++ b/thesis.tex
@@ -307,6 +307,20 @@ These results show that DDPG preprocessing can improve the performance of object
     \label{Fig.Comparison result} 
 \end{figure}
 
+\begin{table}[H]
+	\centering
+    \label{Fig.Comparison result} 
+	\begin{tabular}{c c c}
+		\toprule  %添加表格头部粗线
+		\textbf{Metric}   &\textbf{Precision}  &\textbf{Recall} \\
+		\midrule  %添加表格中横线
+		\textbf{yolov7}    & 0.50  & 0.406 \\
+		\textbf{yolov7\_RL} & 0.523 & 0.415 \\
+		\bottomrule %添加表格底部粗线
+	\end{tabular}
+	\caption{Comparison result}
+\end{table} 
+
 \newpage
 \section{Positive Instance}
 \begin{figure}[H]
