--- a/thesis.bib
+++ b/thesis.bib
@@ -113,3 +113,32 @@
   pages={7464--7475},
   year={2023}
 }
+
+@article{wang2018multitask,
+  title={Multitask learning for object localization with deep reinforcement learning},
+  author={Wang, Yan and Zhang, Lei and Wang, Lituan and Wang, Zizhou},
+  journal={IEEE Transactions on Cognitive and Developmental Systems},
+  volume={11},
+  number={4},
+  pages={573--580},
+  year={2018},
+  publisher={IEEE}
+}
+
+@inproceedings{ayle2020bar,
+  title={Bar—a reinforcement learning agent for bounding-box automated refinement},
+  author={Ayle, Morgane and Tekli, Jimmy and El-Zini, Julia and El-Asmar, Boulos and Awad, Mariette},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={34},
+  number={03},
+  pages={2561--2568},
+  year={2020}
+}
+
+@inproceedings{uzkent2020efficient,
+  title={Efficient object detection in large images using deep reinforcement learning},
+  author={Uzkent, Burak and Yeh, Christopher and Ermon, Stefano},
+  booktitle={Proceedings of the IEEE/CVF winter conference on applications of computer vision},
+  pages={1824--1833},
+  year={2020}
+}
